--- a/html/about.html
+++ b/html/about.html
@@ -94,6 +94,10 @@
 		text-align: center;
 		padding: 0 5%;
 	}
+	em {
+		color: #f96;
+		font-style: normal;
+	}
 	.row { margin-top: 32px }
 	.half { padding: 0 1.5% }
 	ul { padding-left: 48px }
