Improved anchor styles

--- a/html/dev/new.html
+++ b/html/dev/new.html
@@ -16,6 +16,7 @@
 		transition: background .2s;
 		color: #000;
 		display: block;
+		text-decoration: none;
 	}
 	#ides a:hover { background: rgba(24, 160, 255, .8) }
 	#ides img {
