Fix clientside program voting

--- a/html/dev/html.html
+++ b/html/dev/html.html
@@ -303,7 +303,7 @@
 			request('/api/program/vote', function(res) {
 				if (res.indexOf('Error') == 0) alert(res);
 				else if (res == 'Success') {
-					document.getElementsByClassName('user-$op')[0].getElementsByClassName('rep')[0].textContent -= (up.classList.contains('clkd') ? 1 : 0) - (dn.classList.contains('clkd') ? 1 : -1);
+					document.getElementsByClassName('user-$op-name')[0].getElementsByClassName('rep')[0].textContent -= (up.classList.contains('clkd') ? 1 : 0) - (dn.classList.contains('clkd') ? 1 : -1);
 					up.classList.toggle('clkd');
 					dn.classList.remove('clkd');
 				} else alert('Unknown error. Response was: ' + res);
@@ -313,7 +313,7 @@
 			request('/api/program/vote', function(res) {
 				if (res.indexOf('Error') == 0) alert(res);
 				else if (res == 'Success') {
-					document.getElementsByClassName('user-$op')[0].getElementsByClassName('rep')[0].textContent -= (up.classList.contains('clkd') ? 1 : 0) - (dn.classList.contains('clkd') ? 1 : -1);
+					document.getElementsByClassName('user-$op-name')[0].getElementsByClassName('rep')[0].textContent -= (up.classList.contains('clkd') ? 1 : 0) - (dn.classList.contains('clkd') ? 1 : -1);
 					dn.classList.toggle('clkd');
 					up.classList.remove('clkd');
 				} else alert('Unknown error. Response was: ' + res);
