Remove underline in usernames

--- a/html/chat/room.html
+++ b/html/chat/room.html
@@ -665,6 +665,10 @@ $textarea
 	}
 	#stars li { margin: 4px 0 }
 	#editform { margin: 0 }
+	#users a {
+		color: #000;
+		text-decoration: none;
+	}
 	#users li.inactive {
 		opacity: 0.3;
 		transition: opacity 60s, color .2s;
