--- a/html/chat/room.html
+++ b/html/chat/room.html
@@ -630,7 +630,7 @@ $textarea
 		if (hashchangeready) {
 			var hash = parseInt(e.newURL.split('#', 2)[1]);
 			if (hash &amp;&amp; !document.getElementById(hash)) {
-				request('/api/chat/' + hash, function(res) {
+				request('/api/chat/msg/' + hash, function(res) {
 					try {
 						res = JSON.parse(res);
 						if (res.room == $id) location.reload();
