--- a/html/dev/new.html
+++ b/html/dev/new.html
@@ -20,6 +20,7 @@
 	}
 	#ides a:hover { background: rgba(24, 160, 255, .8) }
 	#ides img {
+		display: block;
 		background: #000;
 		padding: 4px;
 		border-radius: 4px;
