--- a/html/dev/canvas.html
+++ b/html/dev/canvas.html
@@ -153,275 +153,10 @@
 	}
 </style>
 <script>
-	var footerOff = true,
+	var mine = $mine,
+		id = $id,
+		footerOff = true,
 		noPageOverflow = 400,
 		pageOverflowMobile = true,
-		mainContentEl = document.getElementById('main'),
-		code = document.getElementById('code'),
-		save = document.getElementById('save'),
-		up = document.getElementById('up'),
-		dn = document.getElementById('dn');
-	code.addEventListener('keypress', function(e) {
-		var oldSelectionStart = this.selectionStart;
-		if (e.keyCode == 13) {
-			if (this.value[oldSelectionStart - 1] == ',') this.eIndent = true;
-			var tabs = this.value.substr(0, oldSelectionStart)
-				.split('\n')[this.value.substr(0, oldSelectionStart).split('\n').length - 1]
-				.split('\t').length
-				- (
-					('{([:,'.indexOf(this.value[oldSelectionStart - 1]) + 1)
-					? 0
-					: (
-						this.value[oldSelectionStart - 1] == ';' &amp;&amp; this.eIndent
-						? (this.eIndent = false || 2) 
-						: 1
-					)
-				);
-			this.value = this.value.substr(0, this.selectionStart) + '\n' + '\t'.repeat(tabs) + this.value.substr(this.selectionStart);
-			this.selectionStart = ++oldSelectionStart + tabs;
-			this.selectionEnd = this.selectionStart;
-			e.preventDefault();
-		} else if ((this.value[this.selectionStart] || '').match(/[^\s\,\(\[\{]/)) {
-			return;
-		} else if (e.keyCode == 34) {
-			this.value = this.value.substr(0, this.selectionStart) + '""' + this.value.substr(this.selectionStart);
-			this.selectionEnd = ++oldSelectionStart;
-			e.preventDefault();
-		} else if (e.keyCode == 39) {
-			this.value = this.value.substr(0, this.selectionStart) + "''" + this.value.substr(this.selectionStart);
-			this.selectionEnd = ++oldSelectionStart;
-			e.preventDefault();
-		} else if (e.keyCode == 40) {
-			this.value = this.value.substr(0, this.selectionStart) + '()' + this.value.substr(this.selectionStart);
-			this.selectionEnd = ++oldSelectionStart;
-			e.preventDefault();
-		} else if (e.keyCode == 91) {
-			this.value = this.value.substr(0, this.selectionStart) + '[]' + this.value.substr(this.selectionStart);
-			this.selectionEnd = ++oldSelectionStart;
-			e.preventDefault();
-		} else if (e.keyCode == 123) {
-			this.value = this.value.substr(0, this.selectionStart) + '{}' + this.value.substr(this.selectionStart);
-			this.selectionEnd = ++oldSelectionStart;
-			e.preventDefault();
-		}s
-	});
-	code.addEventListener('keydown', function(e) {
-		if (e.keyCode == 8 &amp;&amp; this.selectionStart == this.selectionEnd) {
-			console.log(this.value[this.selectionStart - 1] == '(')
-			if (
-				(this.value[this.selectionStart - 1] == '"' &amp;&amp; this.value[this.selectionStart] == '"') ||
-				(this.value[this.selectionStart - 1] == "'" &amp;&amp; this.value[this.selectionStart] == "'") ||
-				(this.value[this.selectionStart - 1] == '(' &amp;&amp; this.value[this.selectionStart] == ')') ||
-				(this.value[this.selectionStart - 1] == '[' &amp;&amp; this.value[this.selectionStart] == ']') ||
-				(this.value[this.selectionStart - 1] == '{' &amp;&amp; this.value[this.selectionStart] == '}')
-			) {
-				var oldSelectionStart = this.selectionStart;
-				this.value = this.value.substr(0, this.selectionStart - 1) + this.value.substr(this.selectionStart + 1);
-				this.selectionEnd = --oldSelectionStart;
-				e.preventDefault();
-			}
-		}
-	});
-	var oldValue;
-	function handleCode() {
-		if (code.value != oldValue) {
-			oldValue = code.value;
-			if (!save.classList.contains('progress')) save.textContent = 'Save';
-			document.getElementById('output').srcdoc = '&lt;!DOCTYPE html>&lt;html>&lt;head>&lt;title>Output frame&lt;/title>&lt;/head>&lt;style>*{margin:0;max-width:100%;box-sizing:border-box}body{background:#000;color:#fff}#canvas{border:1px solid #fff;-webkit-user-select:none;-moz-user-select:none;cursor:default}#console{height:100px;background:#111;overflow:auto;margin-top:8px}#console:empty{display:none}button,canvas{display:block}&lt;/style>&lt;body>&lt;canvas id="canvas">&lt;/canvas>&lt;div id="console">&lt;/div>&lt;button onclick="location.reload()">Restart&lt;/button>&lt;script src="/dev/canvas.js">&lt;/script>&lt;script>\'use strict\';try{this.eval(' + JSON.stringify(code.value) + ')}catch(e){error(e)}&lt;/script>&lt;/body>&lt;/html>';
-		}
-	}
-	var timeout = setTimeout(handleCode, 100);
-	code.addEventListener('keyup', function() {
-		clearTimeout(timeout);
-		timeout = setTimeout(handleCode, 100);
-	});
-	code.addEventListener('keydown', function() {
-		clearTimeout(timeout);
-		timeout = setTimeout(handleCode, 100);
-	});
-	code.addEventListener('keypress', function() {
-		clearTimeout(timeout);
-		timeout = setTimeout(handleCode, 100);
-		onbeforeunload = function() {
-			return 'You have unsaved code.';
-		};
-	});
-	handleCode();
-	save.onclick = function() {
-		if (save.classList.contains('progress')) return;
-		save.classList.add('progress');
-		var savingTimeout = setTimeout(function() {
-			if (save.textContent == 'Save') save.textContent = 'Saving…';
-		}, 200);
-		request('/api/program/save?type=1', function(res) {
-			if (res.indexOf('Error') == 0) {
-				clearTimeout(savingTimeout);
-				alert(res);
-				save.textContent = 'Save';
-			} else if (res.indexOf('Location') == 0) {
-				onbeforeunload = null;
-				location.href = res.split(' ')[1];
-			} else if (res == 'Success') {
-				onbeforeunload = null;
-				save.textContent = 'Saved';
-				document.getElementById('updated').setAttribute('datetime', new Date().toISOString());
-			} else {
-				clearTimeout(savingTimeout);
-				alert('Unknown error. Response was: ' + res);
-			}
-			save.classList.remove('progress');
-		}, 'code=' + encodeURIComponent(code.value));
-	};
-	(document.getElementById('fork') || {}).onclick = function() {
-		var e = this;
-		if (e.classList.contains('progress')) return;
-		e.classList.add('progress');
-		e.textContent = 'Saving…';
-		var e = e.previousSibling.previousSibling;
-		e.hidden = e.previousSibling.previousSibling.hidden = true;
-		request('/api/program/save?type=1&amp;fork=1', function(res) {
-			if (res.indexOf('Error') == 0) {
-				e.hidden = false;
-				e = e.nextSibling.nextSibling;
-				e.hidden = false;
-				e.nextSibling.nextSibling.textContent = 'Fork';
-				alert(res);
-			} else if (res.indexOf('Location') == 0) {
-				onbeforeunload = null;
-				location.href = res.split(' ')[1];
-			} else alert('Unknown error. Response was: ' + res);
-			e.classList.remove('progress');
-		}, 'code=' + encodeURIComponent(code.value));
-	};
-	if (document.getElementById('meta')) {
-		if ($mine) {
-			document.getElementById('title').onclick = function() {
-				this.hidden = true;
-				var edit = document.getElementById('edit-title');
-				edit.hidden = false;
-				edit.focus();
-			};
-			document.getElementById('edit-title').onblur = function() {
-				request('/api/program/edit-title', function(res) {
-					var edit = document.getElementById('edit-title');
-					if (res.indexOf('Error') == 0) {
-						alert(res);
-						edit.value = document.getElementById('title').textContent;
-					} else if (res == 'Success') {
-						edit.hidden = true;
-						var title = document.getElementById('title');
-						title.textContent = edit.value.substr(0, 92) || 'Untitled';
-						if (!edit.value) edit.value = 'Untitled';
-						title.hidden = false;
-					} else alert('Unknown error. Response was: ' + res);
-				}, 'title=' + encodeURIComponent(this.value));
-			};
-			document.getElementById('edit-title').onkeypress = function(e) {
-				if (e.keyCode == 13) this.onblur.call(this);
-			};
-		}
-		up.onclick = function() {
-			request('/api/program/vote', function(res) {
-				if (res.indexOf('Error') == 0) alert(res);
-				else if (res == 'Success') {
-					document.getElementsByClassName('user-$op-name')[0].getElementsByClassName('rep')[0].textContent -= (dn.classList.contains('clkd') ? -1 : 0) - (up.classList.contains('clkd') ? -1 : 1);
-					up.classList.toggle('clkd');
-					dn.classList.remove('clkd');
-				} else alert('Unknown error. Response was: ' + res);
-			}, 'val=' + (this.classList.contains('clkd') ? 0 : 1));
-		};
-		dn.onclick = function() {
-			request('/api/program/vote', function(res) {
-				if (res.indexOf('Error') == 0) alert(res);
-				else if (res == 'Success') {
-					document.getElementsByClassName('user-$op-name')[0].getElementsByClassName('rep')[0].textContent -= (up.classList.contains('clkd') ? 1 : 0) - (dn.classList.contains('clkd') ? 1 : -1);
-					dn.classList.toggle('clkd');
-					up.classList.remove('clkd');
-				} else alert('Unknown error. Response was: ' + res);
-			}, 'val=' + (this.classList.contains('clkd') ? 0 : -1));
-		};
-		document.getElementById('addcomment').onclick = function() {
-			setTimeout(function() {
-				document.getElementById('commentta').focus();
-			}, 0);
-		};
-		var socket = new WebSocket('ws://' + location.hostname + ':81/dev/$id');
-		document.getElementById('comment').onsubmit = function(e) {
-			socket.send(JSON.stringify({
-				event: 'post',
-				body: document.getElementById('commentta').value
-			}));
-			document.getElementById('commentta').value = '';
-			document.getElementById('reset').onclick();
-			e.preventDefault();
-		};
-		document.getElementById('reset').onclick = function() {
-			location.hash = '';
-			history.replaceState('', document.title, window.location.pathname);
-			document.body.scrollTop = innerHeight;
-		};
-		socket.onmessage = function(e) {
-			console.log(e.data);
-			try {
-				var data = JSON.parse(e.data);
-			} catch(err) {
-				console.log(err);
-				return alert('JSON Error. Response was: ' + e.data);
-			}
-			if (data.event == 'add') {
-				var div = document.createElement('div');
-				div.classList.add('comment');
-				div.innerHTML = ' ' + markdown(data.body);
-				if ($rep >= 50) {
-					div.insertBefore(document.getElementById('content').children[2].cloneNode(true), div.firstChild);
-					div.firstChild.firstChild.onclick = upvoteComment;
-					var score = document.createElement('span');
-					score.classList.add('score');
-					score.appendChild(document.createTextNode(score.dataset.score = 0));
-					div.insertBefore(score, div.firstChild);
-				}
-				var sig = document.createElement('span');
-				sig.classList.add('c-sig');
-				sig.appendChild(document.createTextNode('-'));
-				var a = document.createElement('a');
-				a.href = '/user/' + data.user;
-				a.appendChild(document.createTextNode(data.user))
-				sig.appendChild(a);
-				sig.appendChild(document.createTextNode(', '));
-				var permalink = document.createElement('a');
-				if (!data.time) data.time = new Date().getTime();
-				permalink.appendChild(agot(data.time));
-				permalink.href = '#' + (div.id = 'c' + data.id);
-				sig.appendChild(permalink);
-				div.appendChild(sig);
-				document.getElementById('comments').appendChild(div);
-			} else if (data.event == 'scorechange') {
-				var c = document.getElementById('c' + data.id);
-				if (c) c.getElementsByClassName('score')[0].dataset.score = c.getElementsByClassName('score')[0].textContent = data.score;
-			} else if (data.event == 'err') alert('Error: ' + data.body);
-		};
-		var deletebutton = document.getElementById('delete');
-		if (deletebutton) {
-			deletebutton.onclick = function() {
-				if (confirm('Do you want to delete this program?')) {
-					request('/api/program/delete', function(res) {
-						if (res.indexOf('Error') == 0) alert(res);
-						else if (res == 'Success') location.reload();
-						else alert('Unknown error. Response was: ' + res);
-					});
-				}
-			};
-		}
-		function upvoteComment() {
-			this.classList.toggle('clkd');
-			socket.send(JSON.stringify({
-				event: this.classList.contains('clkd') ? 'vote' : 'unvote',
-				id: parseInt(this.parentNode.parentNode.id.substr(1))
-			}));
-		}
-		var comments = document.getElementsByClassName('comment');
-		for (var i = 0; i &lt; comments.length; i++) {
-			comments[i].getElementsByClassName('sctrls')[0].firstChild.onclick = upvoteComment;
-		}
-	}
+		mainContentEl = document.getElementById('main');
 </script>
