--- a/html/qa/ask.html
+++ b/html/qa/ask.html
@@ -111,14 +111,16 @@
 		visibility: hidden;
 	}
 	.ta-cont pre, textarea {
+		position: absolute;
+		top: 0; left: 0;
+		width: 100%;
 		font-size: .9em;
 		font-family: inherit;
 		line-height: 1.2;
 		white-space: pre-wrap;
 	}
 	textarea {
-		position: absolute;
-		top: 0; right: 0; bottom: 0; left: 0;
+		height: 100%;
 		resize: none;
 	}
 	#step4 h3 { margin-bottom: 4px }
@@ -209,6 +211,7 @@
 	addEventListener('input', function() {
 		if (document.activeElement.parentNode.classList.contains('ta-cont')) {
 			document.activeElement.nextElementSibling.textContent = document.activeElement.value + '\n';
+			document.activeElement.parentNode.style.height = document.activeElement.nextElementSibling.offsetHeight + 'px';
 		}
 	});
 	var step = 0,
@@ -305,7 +308,7 @@
 				var label = document.createElement('label'),
 					checkbox = document.createElement('input');
 				checkbox.type = 'checkbox';
-				label.for = checkbox.id = 'tag' + res[i]._id;
+				checkbox.id = 'tag' + res[i]._id;
 				label.appendChild(checkbox);
 				label.appendChild(document.createTextNode(' ' + res[i].name));
 				labels[res[i]._id] = label;
