Hide delete icon for non-OP

--- a/html/qa/question.html
+++ b/html/qa/question.html
@@ -115,8 +115,8 @@ This text will be replaced
 		transition: fill 0.1s;
 		fill: #c00;
 	}
+	.ctrlicon:not([hidden]) { display: block }
 	.ctrlicon {
-		display: block;
 		margin: 4px -2px;
 		height: 24px; width: 24px;
 		font-size: 20px; font-weight: bold;
