--- a/html/qa/ask.html
+++ b/html/qa/ask.html
@@ -126,6 +126,7 @@
 	#step4 h3 { margin-bottom: 4px }
 	#types, #tags, #options { padding-left: 32px }
 	#langsug span {
+		cursor: pointer;
 		background: #afa;
 		padding: 2px 6px;
 		box-shadow: 1px 1px 2px #666;
