--- a/html/dev/canvas.html
+++ b/html/dev/canvas.html
@@ -1,5 +1,5 @@
 <section id="main">
-	<h1><span id="title">$title</span> <a id="fullscreen-button" href="#fullscreen" hidden="">⤢</a> <a id="regular-layout" hidden="">⇲</a> <input type="text" id="edit-title" hidden="" value="$title" />  <small><a id="save">Save</a></small></h1>
+	<h1><span id="title">$title</span> <input type="text" id="edit-title" hidden="" value="$title" /> <a id="fullscreen-button" href="#fullscreen" hidden="">⤢</a> <a id="regular-layout" hidden="">⇲</a> <small><a id="save">Save</a></small></h1>
 	<div id="row" class="row">
 		<textarea id="code" autofocus="">$code</textarea>
 		<iframe id="output" sandbox="allow-scripts"></iframe>
